# icyus

./: .gitignore  CMakeLists.txt
ext/gtest/: CMakeLists.txt
resources/config/: config.conf
resources/uiforms/: form.ui  mainwindow.ui
sources/gui/icyus/: form.ui  icyus.pro
sources/inc/: InternalsCreators.hpp  mainwindow.hpp
sources/inc/internals/: Internals.hpp
sources/inc/internals/communication/: FileReceiver.hpp  FileSender.hpp
sources/inc/internals/communication/details/: FormatTraits.hpp  TransferHeader.hpp  TransferHeaderMsgFactory.hpp  TransferHeaderParser.hpp  TransferHeaderXmlParser.hpp  ZmqSocket.hpp
sources/inc/internals/controller/: Controller.hpp
sources/inc/internals/input/: IInputHandler.hpp  IInputObserver.hpp  InputCallbacks.hpp  InputPropagator.hpp
sources/inc/internals/model/: IModelObserver.hpp  Model.hpp  ModelObserver.hpp
sources/inc/internals/system/: FileWrapper.hpp  ISystemInteractor.hpp  QtSystemInteractor.hpp
sources/inc/internals/utils/: TestClass.hpp  foreach.hpp  log.hpp  utils.hpp
sources/inc/internals/view/: IView.hpp  QtView.hpp  View.hpp
sources/inc/internals/view/detail/: GuiUpdater.hpp  QtViewControls.hpp  QtWidgetManager.hpp
sources/src/: main.cpp  mainwindow.cpp
sources/src/internals/communication/: FileReceiver.cpp  FileSender.cpp
sources/src/internals/controller/: Controller.cpp
sources/src/internals/input/: InputPropagator.cpp
sources/src/internals/model/: Model.cpp
sources/src/internals/system/: FileWrapper.cpp  QtSystemInteractor.cpp
sources/src/internals/utils/: utils.cpp
sources/src/internals/view/: QtView.cpp  View.cpp
sources/src/internals/view/detail/: QtWidgetManager.cpp
sources/tests/: FileSenderTest.cpp  main.cpp
sources/tests/details/: FileMock.hpp  SocketMock.hpp
sources/tests/utils/: utils.hpp
uiforms/: form.ui
utils/: lin_cp_forms.sh  win_cp_forms.bat
